--- a/index.html/index.html
+++ b/index.html/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport"content="width=device-width,initial-scale=1"/>
-    <title>웹서버 프로그래밍 실습</title>
+    <title>20141485 박성배</title>
   </head>
   <body>
-    <h1>20141515</h1>
+    <h1>20141485 박성배</h1>
     <ul>
       <li>1주
         <ol>
-         <li><a href="CM20141515.github.io/20190904/hello.html">hello</a></li>
+         <li><a href="20141485.github.io">hello</a></li>
         </ol>
       </li>
     </ul>
